[project]
name = "lm-hackers"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "tiktoken>=0.7.0",
    "openai>=1.35.14",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache 2.0"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
notebook = [
    "notebook>=7.2.1",
]
lint = [
    "black[jupyter]>=24.4.2",
]
